<resources>
    <string name="app_name" translatable="false">A Hand</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="wlc_msg">How can we assist you today?</string>
    <string name="a_service">Find a service</string>
    <string name="services">Services</string>
    <string name="service_title">Service title</string>
    <string name="service_region">Service region</string>
    <string name="service_price_per_hour">Service price per hour</string>
    <string name="wlc_para">Through this app you will be able to have all kind of repairment
        services plus home services those you don\'t need to hire a company. And also you may get
        handcraft services.</string>
    <string name="add_service">Add service</string>
    <string name="service_name">Service Name</string>
    <string name="service_rate">Service Rate</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="sign_in">SignIn</string>
    <string name="location">Location</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="retype_pass">Retype Password</string>
    <string name="user_info">User Info</string>
    <string name="description">Description</string>
    <string name="picture_description">a view to contain a picture of a service</string>
</resources>