<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textSize="35sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/steel_blue"
            />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/usrImage"
            android:layout_width="200dp"
            android:src="@drawable/profile_add"
            android:scaleType="fitCenter"
            android:layout_marginBottom="5dp"
            android:layout_height="100dp"/>

        <EditText
            android:id="@+id/rFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:autofillHints="@string/full_name"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            />

        <EditText
          android:id="@+id/rLocation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/location"
          android:autofillHints="@string/location"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginBottom="10dp"
          android:inputType="text"
          />

        <EditText
            android:id="@+id/rPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:autofillHints="@string/phone"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="phone"
            />

        <EditText
            android:id="@+id/rEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:autofillHints="@string/prompt_email"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/rPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:autofillHints="@string/prompt_password"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/rePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retype_pass"
            android:autofillHints="@string/retype_pass"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
             />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            />

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            >


            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"/>

            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/steel_blue"
                android:layout_toEndOf="@+id/haveAccount" />


    </RelativeLayout>

  </LinearLayout>
</ScrollView>