<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textAllCaps="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlc_msg"
        android:textSize="18sp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlc_para"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingTop="5dp"
        />

    <!--input Region-->
    <!--    <Spinner-->
    <!--        android:id="@+id/region"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:layout_marginRight="10dp"-->
    <!--        android:layout_marginLeft="10dp"-->
    <!--        android:minHeight="50dp"-->
    <!--        />-->

    <Button
        android:layout_margin="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/a_service"
        android:textColor="@color/white"
        android:id="@+id/fServe"
        android:textAllCaps="false"
        />

</LinearLayout>