<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ServiceActivity"
    app:cardCornerRadius="10dp"
    android:layout_margin="7dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_item"
                android:id="@+id/serviceImg"
                android:contentDescription="@string/picture_description"
                />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/serveTitle"
                android:layout_margin="3dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/service_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/serveRegion"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/service_region"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/priceHr"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/service_price_per_hour"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/description"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>