<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="2dp">
        <ImageView
            android:id="@+id/serviceImg"
            android:layout_width="100dp"
            android:scaleType="centerCrop"
            android:layout_gravity="bottom"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/add_photo"
            android:layout_height="100dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameSrv"
                    android:hint="@string/service_name"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regionSrv"
                    android:hint="@string/service_region"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rateSrv"
            android:hint="@string/service_rate"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descr"
            android:hint="@string/description"
            android:inputType="textLongMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:minWidth="120dp"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_marginTop="30dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:backgroundTint="@color/white"
            android:onClick="hideDialog"
            android:layout_height="wrap_content"
            android:textColor="@color/steel_blue"/>

        <Button
            android:layout_width="wrap_content"
            android:minWidth="120dp"
            android:id="@+id/btnSend"
            android:text="@string/send"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:textColor="@color/steel_blue"/>
    </LinearLayout>
</LinearLayout>